--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,24 @@ body{
     background-color: rgb(8, 92, 141);
 }
 
+.Title{
+    font-size:xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    align-items: center;
+}
+
+.creator{
+    font-size: medium;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    align-items: center;
+}
+
+.credit{
+    padding: 5% 1% 1% 35%;
+    margin-bottom: 0%;
+    height: 2px;
+}
+
 
 .board{
     /* border: 2px solid black; */
